- Redid main viewport layout into static html/css to fix resizing bugs - simplified structure for left tree loading - renamed iframe id to 'modx-frame' - fixed issue where package install window was too tall for viewport - other css fixes

--- a/manager/templates/default/css/style/dashboard.css
+++ b/manager/templates/default/css/style/dashboard.css
@@ -4,8 +4,7 @@
 	left: 0;
 	padding-left: 40px;
 	float: left;
-	width: 100%;
-	height: 100%;
+	width: 95%;
     color: #f0f0f0;
     font-family: Tahoma, Verdana;
     display: none;
